--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -22,27 +22,9 @@
    "execution_count": 2,
    "id": "979aca19",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WDM] - ====== WebDriver manager ======\n",
-      "[WDM] - Current google-chrome version is 103.0.5060\n",
-      "[WDM] - Get LATEST chromedriver version for 103.0.5060 google-chrome\n",
-      "[WDM] - Driver [C:\\Users\\johng\\.wdm\\drivers\\chromedriver\\win32\\103.0.5060.134\\chromedriver.exe] found in cache\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Set the executable path and initialize Splinter\n",
+    "# Set the executable path and initialize the chrome browser in splinter\n",
     "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
     "browser = Browser('chrome', **executable_path, headless=False)"
    ]
@@ -52,13 +34,24 @@
    "execution_count": 3,
    "id": "1402c9f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Visit the mars nasa news site\n",
-    "url = 'https://redplanetscience.com'\n",
+    "url = 'https://mars.nasa.gov/news/'\n",
     "browser.visit(url)\n",
     "# Optional delay for loading the page\n",
-    "#browser.is_element_present_by_css('div.list_text', wait_time=1)"
+    "browser.is_element_present_by_css(\"ul.item_list li.slide\", wait_time=1)"
    ]
   },
   {
@@ -70,7 +63,7 @@
    "source": [
     "html = browser.html\n",
     "news_soup = soup(html, 'html.parser')\n",
-    "slide_elem = news_soup.select_one('div.list_text')"
+    "slide_elem = news_soup.select_one('ul.item_list li.slide')"
    ]
   },
   {
@@ -82,7 +75,7 @@
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">NASA's Perseverance Rover Will Look at Mars Through These 'Eyes'</div>"
+       "<div class=\"content_title\"><a href=\"/news/9240/10-years-since-landing-nasas-curiosity-mars-rover-still-has-drive/\" target=\"_self\">10 Years Since Landing, NASA's Curiosity Mars Rover Still Has Drive</a></div>"
       ]
      },
      "execution_count": 5,
@@ -91,7 +84,7 @@
     }
    ],
    "source": [
-    "slide_elem.find('div', class_='content_title')"
+    "slide_elem.find(\"div\", class_='content_title')"
    ]
   },
   {
@@ -103,7 +96,7 @@
     {
      "data": {
       "text/plain": [
-       "\"NASA's Perseverance Rover Will Look at Mars Through These 'Eyes'\""
+       "\"10 Years Since Landing, NASA's Curiosity Mars Rover Still Has Drive\""
       ]
      },
      "execution_count": 6,
@@ -113,7 +106,7 @@
    ],
    "source": [
     "# Use the parent element to find the first `a` tag and save it as `news_title`\n",
-    "news_title = slide_elem.find('div', class_='content_title').get_text()\n",
+    "news_title = slide_elem.find(\"div\", class_='content_title').get_text()\n",
     "news_title"
    ]
   },
@@ -126,7 +119,7 @@
     {
      "data": {
       "text/plain": [
-       "'A pair of zoomable cameras will help scientists and rover drivers with high-resolution color images.'"
+       "'Despite signs of wear, the intrepid spacecraft is about to start an exciting new chapter of its mission as it climbs a Martian mountain.'"
       ]
      },
      "execution_count": 7,
@@ -136,7 +129,7 @@
    ],
    "source": [
     "# Use the parent element to find the paragraph text\n",
-    "news_p = slide_elem.find('div', class_='article_teaser_body').get_text()\n",
+    "news_p = slide_elem.find('div', class_=\"article_teaser_body\").get_text()\n",
     "news_p"
    ]
   },
@@ -165,20 +158,7 @@
    "execution_count": 9,
    "id": "e1529e8b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'WebDriver' object has no attribute 'find_elements_by_tag_name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_95736/1716700655.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Find and click the full image button\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mfull_image_elem\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbrowser\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_by_tag\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'button'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mfull_image_elem\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclick\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\splinter\\driver\\webdriver\\__init__.py\u001b[0m in \u001b[0;36mfind_by_tag\u001b[1;34m(self, tag, wait_time)\u001b[0m\n\u001b[0;32m    559\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mfind_by_tag\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtag\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwait_time\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    560\u001b[0m         return self.find_by(\n\u001b[1;32m--> 561\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_elements_by_tag_name\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    562\u001b[0m             \u001b[0mtag\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    563\u001b[0m             \u001b[0mwait_time\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mwait_time\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'WebDriver' object has no attribute 'find_elements_by_tag_name'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Find and click the full image button\n",
     "full_image_elem = browser.find_by_tag('button')[1]\n",
@@ -187,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "ee815786",
    "metadata": {},
    "outputs": [],
@@ -199,17 +179,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "e0e2ad4f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'image/featured/mars3.jpg'"
+       "'image/featured/mars1.jpg'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,17 +202,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "d1d27dec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars3.jpg'"
+       "'https://spaceimages-mars.com/image/featured/mars1.jpg'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,8 +225,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "ecf180a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mars - Earth Comparison</td>\n",
+       "      <td>Mars</td>\n",
+       "      <td>Earth</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Diameter:</td>\n",
+       "      <td>6,779 km</td>\n",
+       "      <td>12,742 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mass:</td>\n",
+       "      <td>6.39 × 10^23 kg</td>\n",
+       "      <td>5.97 × 10^24 kg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Moons:</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Distance from Sun:</td>\n",
+       "      <td>227,943,824 km</td>\n",
+       "      <td>149,598,262 km</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         0                1                2\n",
+       "0  Mars - Earth Comparison             Mars            Earth\n",
+       "1                Diameter:         6,779 km        12,742 km\n",
+       "2                    Mass:  6.39 × 10^23 kg  5.97 × 10^24 kg\n",
+       "3                   Moons:                2                1\n",
+       "4       Distance from Sun:   227,943,824 km   149,598,262 km"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_html('https://galaxyfacts-mars.com')[0]\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2dd4c81d",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +340,7 @@
        "      <th>Earth</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>description</th>\n",
+       "      <th>Description</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
@@ -321,7 +387,7 @@
       ],
       "text/plain": [
        "                                    Mars            Earth\n",
-       "description                                              \n",
+       "Description                                              \n",
        "Mars - Earth Comparison             Mars            Earth\n",
        "Diameter:                       6,779 km        12,742 km\n",
        "Mass:                    6.39 × 10^23 kg  5.97 × 10^24 kg\n",
@@ -337,22 +403,21 @@
     }
    ],
    "source": [
-    "df = pd.read_html('https://galaxyfacts-mars.com')[0]\n",
-    "df.columns=['description', 'Mars', 'Earth']\n",
-    "df.set_index('description', inplace=True)\n",
+    "df.columns=['Description', 'Mars', 'Earth']\n",
+    "df.set_index('Description', inplace=True)\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2dd4c81d",
+   "id": "2de7b569",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n    <tr>\\n      <th>description</th>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Mars - Earth Comparison</th>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
+       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n    <tr>\\n      <th>Description</th>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Mars - Earth Comparison</th>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
      "execution_count": 15,
@@ -382,23 +447,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "da1f4c4c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1. Use browser to visit the URL \n",
-    "url = 'https://marshemispheres.com/'\n",
-    "\n",
-    "browser.visit(url)\n",
-    "\n",
-    "# Parse the resulting html with soup\n",
-    "html = browser.html\n",
-    "img_soup = soup(html, 'html.parser')\n",
-    "\n",
-    "# Optional delay for loading the page\n",
-    "browser.is_element_present_by_css('div.list_text', wait_time=1)"
+    "url = 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars'\n",
+    "browser.visit(url)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "16e9cbb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2. Create a list to hold the images and titles.\n",
+    "hemisphere_image_urls = []\n",
+    "\n",
+    "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
+    "\n",
+    "# Results returned as an iterable list\n",
+    "results = img_soup.find_all('div', class_='item')\n",
+    "\n",
+    "# Loop through returned results\n",
+    "for result in results:\n",
+    "    \n",
+    "    # Retrieve the titles\n",
+    "    title = result.find('h3').text\n",
+    "    \n",
+    "    # Get the link to go the full image site\n",
+    "    img_url = result.find('a')['href']\n",
+    "    \n",
+    "    # Creating the full_img_url\n",
+    "    full_img_url = main_url + img_url\n",
+    "    \n",
+    "    # Use browser to go to the full image url and set up the HTML parser\n",
+    "    browser.visit(full_img_url)\n",
+    "    html = browser.html\n",
+    "    img_soup = soup(html, 'html.parser')\n",
+    "    \n",
+    "    # Retrieve the full image urls\n",
+    "    hemisphere_img = img_soup.find('div',class_='downloads')\n",
+    "    hemisphere_full_img = hemisphere_img.find('a')['href']\n",
+    "    \n",
+    "    # Printing hemisphere_full_img\n",
+    "    print(hemisphere_full_img)\n",
+    "    \n",
+    "    # Creating hemispheres dict\n",
+    "    hemispheres = dict({'img_url':hemisphere_full_img, 'title':title})\n",
+    "  \n",
+    "    #Append the hemisphere_image_urls list\n",
+    "    hemisphere_image_urls.append(hemispheres)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "86d90b5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4. Print the list that holds the dictionary of each image url and title.\n",
+    "hemisphere_image_urls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "5f0f9421",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5. Quit the browser\n",
+    "browser.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a91df7b9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -417,7 +561,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
